--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -60,6 +60,8 @@
   {We conducted a qualitative analysis on 1,545 emails from the Linux Kernel Mailing List that were associated with rejected changes. We found that \ul{more than half} (67\%) of the non-technical emails included uncivil features. Particularly, frustration, name calling, and impatience are the most frequent features in uncivil emails. }
   {ferreira2021shut}
 
+\pitch{\includegraphics[width=.95\linewidth]{linus-email.png}}
+
 \qte
   {karl-fogel}
   {Most \ul{free} software projects \ul{fail}.}
