--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -22,12 +22,12 @@
 
 \documentclass{article}
 \usepackage{../osbp}
-\newcommand*\thetitle{Debating}
+\newcommand*\thetitle{Debating While Coding}
 \begin{document}
 
-\plush{\osbpTitlePage{1}{}}
+\plush{\osbpTitlePage{1}{jYeZuaLt7nI}}
 
-\thought{Open source must be \ul{the only} way for you to write code.}
+\thought[bugayenko2015blog1222]{Open source must be \ul{the only} way for you to write code.}
 
 \qte
   [Naveen Raman]
@@ -67,7 +67,7 @@
   {Most \ul{free} software projects \ul{fail}.}
   {fogel2005producing}
 
-\thought{Always \ul{start} your message with a nickname of the person who you are talking to.}
+\thought[bugayenko2020blog0729]{Always \ul{start} your message with a nickname of the person who you are talking to.}
 
 \pitch{
   \begin{multicols}{2}
@@ -83,7 +83,7 @@
 
 \thought{In an argument, provide \ul{links} that support your point of view.}
 
-\thought{Beautify your profile, start with an anthropomorphic avatar.}
+\thought[bugayenko2020blog0729]{Beautify your profile, start with an anthropomorphic avatar.}
 
 \qte
   [Kristine Nowak]
@@ -117,7 +117,7 @@
 
 \pitch{\includegraphics[width=.75\linewidth]{monica.png}}
 
-\thought{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
+\thought[bugayenko2014blog1007,bugayenko2016blog0823]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
 
 \qte
   {mark-warschauer}
@@ -134,7 +134,7 @@
 
 \pitch{\includegraphics[width=.9\linewidth]{channels.png}}
 
-\thought{Be polite, especially when you are angry or disagree.}
+\thought[bugayenko2020blog0729]{Be polite, especially when you are angry or disagree.}
 
 \qte
   [Xuan Lu]
