--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -32,6 +32,9 @@
 % when and how we reject PRs?
 %
 
+% Effects of personality traits on pull request acceptance
+% RN Iyer, SA Yun, M Nagappan, J Hoey - IEEE Transactions on Software Engineering, 2019
+
 \qte
   {eric-raymond}
   {Good programmers know what to write. Great ones know what to rewrite (and reuse).}
