--- a/main.bib
+++ b/main.bib
@@ -185,3 +185,160 @@
   pages={40--49},
   year={2022}
 }
+
+@book{hetzel1993complete,
+  title={{The Complete Guide to Software Testing}},
+  author={Hetzel, Bill},
+  year={1993},
+  publisher={A Wiley-QED Publication},
+  edition={2nd}
+}
+
+@book{myers2012art,
+  title={{The Art of Software Testing}},
+  author={Myers, Glenford J. and Badgett, Tom and Thomas, Todd M. and Sandler, Corey},
+  edition={3rd},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+@misc{spolsky2000bugs,
+  author = {Spolsky, Joel},
+  title = {{Painless Bug Tracking}},
+  howpublished = {\url{https://www.joelonsoftware.com/2000/11/08/painless-bug-tracking/}},
+  year = {2000},
+  month={November},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@inproceedings{bettenburg2008makes,
+  title={{What Makes a Good Bug Report?}},
+  author={Bettenburg, Nicolas and Just, Sascha and Schr{\"o}ter, Adrian and Weiss, Cathrin and Premraj, Rahul and Zimmermann, Thomas},
+  booktitle={{Proceedings of the 16th International Symposium on Foundations of Software Engineering}},
+  pages={308--318},
+  year={2008}
+}
+
+@misc{bugayenko2018blog0206,
+  author = {Bugayenko, Yegor},
+  title = {{More Bugs, Please}},
+  howpublished = {\url{https://www.yegor256.com/180206.html}},
+  year = {2018},
+  month = {February},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2018blog0724,
+  author = {Bugayenko, Yegor},
+  title = {{Either Bugs or Pull Requests ... or You Are Out}},
+  howpublished = {\url{https://www.yegor256.com/180724.html}},
+  year = {2018},
+  month = {July},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@inproceedings{herzig2013s,
+  title={{It's Not a Bug, It's a Feature: How Misclassification Impacts Bug Prediction}},
+  author={Herzig, Kim and Just, Sascha and Zeller, Andreas},
+  booktitle={{Proceedings of the 35th International Conference on Software Engineering}},
+  pages={392--401},
+  year={2013},
+  organization={IEEE}
+}
+
+@misc{bugayenko2022blog0329,
+  author = {Bugayenko, Yegor},
+  title = {{Bugs Occam's Razor}},
+  howpublished = {\url{https://www.yegor256.com/220329.html}},
+  year = {2022},
+  month = {March},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2015blog1222,
+  author = {Bugayenko, Yegor},
+  title = {{Why Don't You Contribute to Open Source?}},
+  howpublished = {\url{https://www.yegor256.com/151222.html}},
+  year = {2015},
+  month = {December},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2020blog0729,
+  author = {Bugayenko, Yegor},
+  title = {{Open Source Etiquette}},
+  howpublished = {\url{https://www.yegor256.com/200729.html}},
+  year = {2020},
+  month = {July},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2014blog1007,
+  author = {Bugayenko, Yegor},
+  title = {{Stop Chatting, Start Coding}},
+  howpublished = {\url{https://www.yegor256.com/141007.html}},
+  year = {2014},
+  month = {October},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2016blog0823,
+  author = {Bugayenko, Yegor},
+  title = {{Eight Levels of Communication Maturity}},
+  howpublished = {\url{https://www.yegor256.com/160823.html}},
+  year = {2016},
+  month = {August},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@inproceedings{reis2002overview,
+  title={{An Overview of the Software Engineering Process and Tools in the Mozilla Project}},
+  author={Reis, Christian Robottom and de Mattos Fortes, Renata Pontin},
+  booktitle={{Proceedings of the Open Source Software Development Workshop}},
+  volume={8},
+  year={2002}
+}
+
+@inproceedings{anvik2006should,
+  title={{Who Should Fix This Bug?}},
+  author={Anvik, John and Hiew, Lyndon and Murphy, Gail C.},
+  booktitle={{Proceedings of the 28th International Conference on Software Engineering}},
+  pages={361--370},
+  year={2006}
+}
+
+@inproceedings{dal2016makes,
+  title={{What Makes a Satisficing Bug Report?}},
+  author={Dal Sasso, Tommaso and Mocci, Andrea and Lanza, Michele},
+  booktitle={{Proceedings of the International Conference on Software Quality, Reliability and Security (QRS)}},
+  pages={164--174},
+  year={2016},
+  organization={IEEE}
+}
+
+@misc{bugayenko2023blog0725,
+  author = {Bugayenko, Yegor},
+  title = {{A Disabled Test In Lieu of a Bug Report}},
+  howpublished = {\url{https://www.yegor256.com/230725.html}},
+  year = {2023},
+  month = {July},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2014blog1124,
+  author = {Bugayenko, Yegor},
+  title = {{Five Principles of Bug Tracking}},
+  howpublished = {\url{https://www.yegor256.com/141124.html}},
+  year = {2014},
+  month = {November},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@misc{bugayenko2018blog0424,
+  author = {Bugayenko, Yegor},
+  title = {{The Right Way to Report a Bug}},
+  howpublished = {\url{https://www.yegor256.com/180424.html}},
+  year = {2018},
+  month = {April},
+  note = {[Online; accessed 08-02-2024]}
+}
