--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -96,7 +96,7 @@ More about it by \citet{bugayenko2018blog0206}.}
 
 \thought[bugayenko2018blog0424]{Exaggerate for effect}
 
-\pitch{\pptBanner{All of These Are Bugs:}
+\pitch{\pptBanner{Do This, While Reporting Bugs:}
 \begin{itemize}\setlength\itemsep{0em}
 \item Stay cool
 \item Exaggerate
