--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -169,4 +169,20 @@ fn calculates_23rd_fibonacci_number() {
 \end{pptWide}
 \plush{}
 
+\pitch{\pptBanner{Repositories With a Lot of Bugs (9 Feb 2024)}
+{\ttfamily\small\begin{tabular}{llrrr}
+\toprule
+Github Repository & Issues \\
+\midrule
+\href{https://bugzilla.mozilla.org/}{mozilla bugzilla} & 1,8M+ \\
+\href{https://gitlab.com/gitlab-org/gitlab/-/issues}{gitlab-org/gitlab} & 172,462 \\
+\href{https://github.com/flutter/flutter}{flutter/flutter} & 79,386 \\
+\href{https://github.com/kubernetes/kubernetes}{kubernetes/kubernetes} & 42,627 \\
+\href{https://github.com/tensorflow/tensorflow}{tensorflow/tensorflow} & 36,776 \\
+\href{https://github.com/moby/moby}{moby/moby} & 19,367 \\
+\bottomrule
+\end{tabular}}\par
+All repositories are open source.}
+
+
 \end{document}
