--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -170,7 +170,7 @@ fn calculates_23rd_fibonacci_number() {
 \plush{}
 
 \pitch{\pptBanner{Repositories With a Lot of Bugs (9 Feb 2024)}
-{\ttfamily\small\begin{tabular}{llrrr}
+{\ttfamily\small\begin{tabular}{lr}
 \toprule
 Github Repository & Issues \\
 \midrule
