--- a/osbp.sty
+++ b/osbp.sty
@@ -32,6 +32,7 @@
 \RequirePackage{calc}
 \RequirePackage{soul}
 \RequirePackage{footmisc}
+\RequirePackage{booktabs}
 
 \newcommand\osbpTitlePage[2]{\begin{pptMiddle}%
   \pptTitle{\thetitle}{}\par
