--- a/main.bib
+++ b/main.bib
@@ -342,3 +342,104 @@
   month = {April},
   note = {[Online; accessed 08-02-2024]}
 }
+
+@inproceedings{sadowski2018modern,
+  title={{Modern Code Review: A Case Study at Google}},
+  author={Sadowski, Caitlin and S{\"o}derberg, Emma and Church, Luke and Sipko, Michal and Bacchelli, Alberto},
+  booktitle={{Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Practice}},
+  pages={181--190},
+  year={2018}
+}
+
+@inproceedings{bosu2015characteristics,
+  title={{Characteristics of Useful Code Reviews: An Empirical Study at Microsoft}},
+  author={Bosu, Amiangshu and Greiler, Michaela and Bird, Christian},
+  booktitle={{Proceedings of the 12th Working Conference on Mining Software Repositories}},
+  pages={146--156},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{czerwonka2015code,
+  title={{Code Reviews Do Not Find Bugs: How the Current Code Review Best Practice Slows Us Down}},
+  author={Czerwonka, Jacek and Greiler, Michaela and Tilford, Jack},
+  booktitle={{Proceedings of the 37th IEEE International Conference on Software Engineering}},
+  volume={2},
+  pages={27--28},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{jiang2013will,
+  title={{Will My Patch Make It? And How Fast? Case Study on the Linux Kernel}},
+  author={Jiang, Yujuan and Adams, Bram and German, Daniel M.},
+  booktitle={{Proceedings of the 10th Working Conference on Mining Software Repositories (MSR)}},
+  pages={101--110},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{ackerman1989software,
+  title={{Software Inspections: An Effective Verification Process}},
+  author={Ackerman, A. Frank and Buchwald, Lynne S. and Lewski, Frank H.},
+  journal={{IEEE software}},
+  volume={6},
+  number={3},
+  pages={31--36},
+  year={1989},
+  publisher={IEEE}
+}
+
+@article{fagan1976design,
+  title={{Design and Code Inspections to Reduce Errors in Program Development}},
+  author={Fagan, Michael},
+  journal={{IBM Systems Journal}},
+  number={3},
+  year={1976},
+}
+
+@inproceedings{bacchelli2013expectations,
+  title={{Expectations, Outcomes, and Challenges of Modern Code Review}},
+  author={Bacchelli, Alberto and Bird, Christian},
+  booktitle={{Proceedings of the 35th International Conference on Software Engineering}},
+  pages={712--721},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{sutherland2009can,
+  title={{Can Peer Code Reviews be Exploited for Later Information Needs?}},
+  author={Sutherland, Andrew and Venolia, Gina},
+  booktitle={{Proceedings of the 31st International Conference on Software Engineering: Companion Volume}},
+  pages={259--262},
+  year={2009},
+  organization={IEEE}
+}
+
+@article{ortu2020you,
+  title={{How Do You Propose Your Code Changes? Empirical Analysis of Affect Metrics of Pull Requests on GitHub}},
+  author={Ortu, Marco and Destefanis, Giuseppe and Graziotin, Daniel and Marchesi, Michele and Tonelli, Roberto},
+  journal={{IEEE Access}},
+  volume={8},
+  pages={110897--110907},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{freira2018analyzing,
+  title={{Analyzing The Impact Of Feedback In GitHub On The Software Developer’s Mood}},
+  author={Freira, Mateus and Caetano, Josemar and Oliveira, Johnatan and Marques-Neto, Humberto},
+  booktitle={{Proceedings of the International Conference on Software Engineering \& Knowledge Engineering}},
+  year={2018}
+}
+
+@article{iyer2019effects,
+  title={{Effects of Personality Traits on Pull Request Acceptance}},
+  author={Iyer, Rahul N. and Yun, S. Alex and Nagappan, Meiyappan and Hoey, Jesse},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={47},
+  number={11},
+  pages={2632--2643},
+  year={2019},
+  publisher={IEEE}
+}
