--- a/main.bib
+++ b/main.bib
@@ -443,3 +443,21 @@
   year={2019},
   publisher={IEEE}
 }
+
+@inproceedings{ford2019beyond,
+  title={{Beyond the Code Itself: How Programmers \emph{Really} Look at Pull Requests}},
+  author={Ford, Denae and Behroozi, Mahnaz and Serebrenik, Alexander and Parnin, Chris},
+  booktitle={{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Society}},
+  pages={51--60},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{liu2019automatic,
+  title={{Automatic Generation of Pull Request Descriptions}},
+  author={Liu, Zhongxin and Xia, Xin and Treude, Christoph and Lo, David and Li, Shanping},
+  booktitle={{Proceedings of the 34th International Conference on Automated Software Engineering}},
+  pages={176--188},
+  year={2019},
+  organization={IEEE}
+}
