--- a/osbp.sty
+++ b/osbp.sty
@@ -48,6 +48,7 @@
 
 \newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
 \newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\color{gray}{#1}]{../faces/#2.jpg}{#3}{\color{gray}\rmfamily\scriptsize\bibentry{#4}}}}
+\newcommand\source[1]{\par{\scriptsize Source: \bibentry{#1}\par}}
 \newcounter{thght}
 \newcommand\thought[2][]{
   \addtocounter{thght}{1}
