--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -80,4 +80,16 @@
   {Good programmers know what to write. Great ones know what to rewrite (and reuse).}
   {raymond1999cathedral}
 
+\thought[bugayenko2019blog1203]{Don't run the code in the branch}
+
+\thought{Rely on the CI status, but not too much}
+
+\thought[bugayenko2015blog0209]{Make not compromises}
+
+\thought[bugayenko2015blog0209]{Have no fear}
+
+\thought[bugayenko2015blog0622]{Reject it, if it doesn't reproduce a bug}
+
+\thought[bugayenko2015blog0622]{Reject it, if it lowers code coverage}
+
 \end{document}
