--- a/main.bib
+++ b/main.bib
@@ -461,3 +461,49 @@
   year={2019},
   organization={IEEE}
 }
+
+@misc{bugayenko2022blog0804,
+  author = {Bugayenko, Yegor},
+  title = {{The Code and Its Tests in Different Pull Requests}},
+  howpublished = {\url{https://www.yegor256.com/220804.html}},
+  year = {2022},
+  month = {August},
+  note = {[Online; accessed 08-02-2024]}
+}
+
+@misc{bugayenko2019blog1203,
+  author = {Bugayenko, Yegor},
+  title = {{Does Code Review Involve Testing?}},
+  howpublished = {\url{https://www.yegor256.com/191203.html}},
+  year = {2019},
+  month = {December},
+  note = {[Online; accessed 08-02-2024]}
+}
+
+@misc{bugayenko2015blog0209,
+  author = {Bugayenko, Yegor},
+  title = {{Four NOs of a Serious Code Reviewer}},
+  howpublished = {\url{https://www.yegor256.com/150209.html}},
+  year = {2015},
+  month = {February},
+  note = {[Online; accessed 08-02-2024]}
+}
+
+@misc{bugayenko2015blog0622,
+  author = {Bugayenko, Yegor},
+  title = {{A Few Valid Reasons to Reject a Bug Fix}},
+  howpublished = {\url{https://www.yegor256.com/150622.html}},
+  year = {2015},
+  month = {June},
+  note = {[Online; accessed 08-02-2024]}
+}
+
+@article{lenarduzzi2021does,
+  title={{Does code quality affect pull request acceptance? An empirical study}},
+  author={Lenarduzzi, Valentina and Nikkola, Vili and Saarim{\"a}ki, Nyyti and Taibi, Davide},
+  journal={{Journal of Systems and Software}},
+  volume={171},
+  pages={110806},
+  year={2021},
+  publisher={Elsevier}
+}
