--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -33,7 +33,7 @@
   {We found that \ul{33\%} of the patches makes it into a Linux release, and that most of them need \ul{3 to 6 months} for this.}
   {jiang2013will}
 
-\thought{Make small pull requests}
+\thought[bugayenko2020blog0729]{Make small pull requests}
 
 \qte
   [Amiangshu Bosu]
@@ -47,7 +47,7 @@
   {A correlation between \ul{change size} and \ul{review quality} is acknowledged by Google and developers are strongly encouraged to make small, incremental changes (with the exception of large deletions and automated refactoring).}
   {sadowski2018modern}
 
-\thought{Don't group your changes}
+\thought[bugayenko2020blog0729]{Don't group your changes}
 
 \qte
   [Carolyn D. Egelman]
@@ -116,6 +116,12 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   {Only about 15\% of comments provided by reviewers indicate a possible defect, much less a blocking defect. Rather, it is feedback related to the long-term code \ul{maintainability} that comprises a much larger portion of comments provided by reviewers; at least 50\% of all.}
   {czerwonka2015code}
 
-% https://www.yegor256.com/2020/07/29/open-source-etiquette.html
+\qte
+  [Valentina Lenarduzzi]
+  {valentina-lenarduzzi}
+  {Unexpectedly, quality \ul{flaws} measured by PMD turned out not to affect the acceptance of a pull request at all. As suggested by other works, other factors such as the \ul{reputation} of the maintainer and the \ul{importance} of the delivered feature might be more important than other qualities in terms of pull request acceptance.}
+  {lenarduzzi2021does}
+
+\thought[bugayenko2022blog0804]{Commit the code and its tests in different pull requests}
 
 \end{document}
