--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -84,6 +84,12 @@
 
 \thought{Rely on the CI status, but not too much}
 
+\qte
+  [Mairieli Wessel]
+  {mairieli-wessel}
+  {Our findings also suggest that the adoption of GitHub Actions leads to more rejections of pull requests (PRs), more communication in accepted PRs and less communication in rejected PRs, fewer commits in accepted PRs and more commits in rejected PRs, and more time to accept a PR.}
+  {wessel2023github}
+
 \thought[bugayenko2015blog0209]{Make not compromises}
 
 \thought[bugayenko2015blog0209]{Have no fear}
