--- a/main.bib
+++ b/main.bib
@@ -507,3 +507,14 @@
   year={2021},
   publisher={Elsevier}
 }
+
+@article{wessel2023github,
+  title={{{\scshape GitHub Actions}: The Impact on the Pull Request Process}},
+  author={Wessel, Mairieli and Vargovich, Joseph and Gerosa, Marco A and Treude, Christoph},
+  journal={{Empirical Software Engineering}},
+  volume={28},
+  number={6},
+  pages={131},
+  year={2023},
+  publisher={Springer}
+}
