--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -27,6 +27,13 @@
 
 \plush{\osbpTitlePage{4}{}}
 
+
+\qte
+  [Martin Fowler]
+  {martin-fowler}
+  {We should remember that \ul{pre-integration} review grew out of an open-source context where contributions appear impromptu from \ul{weakly connected} developers.}
+  {fowler2006}
+
 \pitch{.}
 
 % when and how we reject PRs?
@@ -40,7 +47,7 @@
 
 \qte
   [Michael Fagan]
-  {michael-fagan.jpg}
+  {michael-fagan}
   {The inspection is not intended to redesign, evaluate alternate design solutions, or to find solutions to errors; it is intended \ul{just} to find errors!}
   {fagan1976design}
 
