--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -32,4 +32,7 @@
 % configure CI in Github
 % how it works in other systems? Gitlab
 
+% G. Gousios, A. Zaidman, M.-A. Storey, and A. van Deursen, “Work Practices and Challenges in Pull-based Development: The Integrator’s Perspective,” in Proceedings of the 37th International Conference on Software Engineering (ICSE’15), 2015, pp. 358–368.
+% Gousios et al. [18] determine that 75% of projects that use PRs also use CI.
+
 \end{document}
