--- a/main.bib
+++ b/main.bib
@@ -518,3 +518,11 @@
   year={2023},
   publisher={Springer}
 }
+
+@misc{fowler2006,
+  author = {Fowler, Martin},
+  title = {{Continuous Integration}},
+  howpublished = {\url{http://martinfowler.com/articles/continuousIntegration.html}},
+  year = {2006},
+  note = {[Online; accessed 07-02-2024]}
+}
