--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -31,7 +31,7 @@
 
 \qte
   [Dabbish Laura]
-  {dabbish-laura.jpg}
+  {dabbish-laura}
   {We found that projects in our sample \ul{did not} extensively discuss the addition or changes to the code of conduct.}
   {li2021code}
 
