--- a/osbp.sty
+++ b/osbp.sty
@@ -33,6 +33,7 @@
 \RequirePackage{soul}
 \RequirePackage{footmisc}
 \RequirePackage{booktabs}
+\RequirePackage{graphicx}
 
 \newcommand\osbpTitlePage[2]{\begin{pptMiddle}%
   \pptTitle{\thetitle}{}\par
@@ -47,7 +48,15 @@
 \end{pptMiddle}}
 
 \newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
-\newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\color{gray}{#1}]{../faces/#2.jpg}{#3}{\color{gray}\rmfamily\scriptsize\bibentry{#4}}}}
+\newcommand\qte[4][]{
+  \pitch{
+    \pptQuote
+      [\scriptsize\scshape\color{gray}{#1}]
+      {../faces/#2.jpg}
+      {#3}
+      {\color{gray}\rmfamily\scriptsize\bibentry{#4}}
+  }
+}
 \newcommand\source[1]{\par{\scriptsize Source: \bibentry{#1}\par}}
 \newcounter{thght}
 \newcommand\thought[2][]{
