--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -45,7 +45,7 @@
 \qte
   [Yulia Tsvetkov]
   {yulia-tsvetkov}
-  {Toxic language in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., Youtube), but also through open-source-specific displays of entitlement and urgency related to timing expectations.}
+  {Toxic \ul{language} in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., Youtube), but also through open-source-specific displays of \ul{entitlement} and \ul{urgency} related to timing expectations.}
   {raman2020stress}
 
 \qte
@@ -133,6 +133,14 @@
   {ebert2022communication}
 
 \pitch{\includegraphics[width=.9\linewidth]{channels.png}}
+
+\thought{Be aware of robots!}
+
+\qte
+  [Natarajan Chidambaram]
+  {natarajan-chidambaram}
+  {Collaborative software development through GitHub repositories frequently relies on bot accounts to automate repetitive and error-prone tasks. This highlights the need to have accurate and efficient bot identification tools.}
+  {chidambaram2024rabbit}
 
 \thought[bugayenko2020blog0729]{Be polite, especially when you are angry or disagree.}
 
