--- a/main.bib
+++ b/main.bib
@@ -526,3 +526,12 @@
   year = {2006},
   note = {[Online; accessed 07-02-2024]}
 }
+
+@inproceedings{chidambaram2024rabbit,
+  title={{RABBIT: A tool for identifying bot accounts based on their recent GitHub event history}},
+  author={Chidambaram, Natarajan and Mens, Tom and Decan, Alexandre},
+  booktitle={{Proceedings of the 21st International Conference on Mining Software Repositories}},
+  year={2024},
+  organization={ACM, Lisbon, Portugal},
+  doi={10.1145/3643991.3644877}
+}
