--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -117,13 +117,12 @@
 
 \pitch{\includegraphics[width=.75\linewidth]{monica.png}}
 
-\thought[bugayenko2014blog1007,bugayenko2016blog0823]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
+\thought[bugayenko2014blog1007]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
 
 \qte
   {mark-warschauer}
   {The findings showed a tendency toward \ul{more equal} participation in computer mode. Students used language which is lexically and syntactically \ul{more formal} and complex in electronic discussion than they did in face-to-face discussion, thus demonstrating another possible advantage of computer-mediated communication.}
   {warschauer1995comparing}
-
 \pitch{\includegraphics[width=\linewidth]{face-to-face.png}}
 
 \qte
@@ -131,8 +130,10 @@
   {verena-ebert}
   {Developers use many channels. Previously, mailing lists were very common. Nowadays, other communication channels become more and more popular, for example, Slack, issue trackers, Twitter or Gitter.}
   {ebert2022communication}
-
-\pitch{\includegraphics[width=.9\linewidth]{channels.png}}
+\pitch{
+  \includegraphics[width=.9\linewidth]{channels.png}
+  \par
+  More about it: \bibentry{bugayenko2016blog0823}}
 
 \thought{Be aware of robots!}
 
@@ -147,7 +148,7 @@
 \qte
   [Xuan Lu]
   {xuan-lu}
-  {Developers who use emojis in their posts are significantly less likely to dropout from the online work platform.}
+  {Developers who use \ul{emojis} in their posts are significantly less likely to \ul{dropout} from the online work platform.}
   {lu2022emojis}
 
 \qte
