--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Reporting Bugs}
 \begin{document}
 
-\plush{\osbpTitlePage{2}{}}
+\plush{\osbpTitlePage{2}{nLcnE4N3Nz4}}
 
 \qte
   [Joel Spolsky]
